# haskellforge

./: .gitignore  README.md  pyproject.toml
humaneval-hs/: HumanEval-0.hs  HumanEval-1.hs  HumanEval-10.hs  HumanEval-11.hs  HumanEval-12.hs  HumanEval-13.hs  HumanEval-14.hs  HumanEval-15.hs  HumanEval-2.hs  HumanEval-3.hs  HumanEval-4.hs  HumanEval-5.hs  HumanEval-6.hs  HumanEval-7.hs  HumanEval-8.hs  HumanEval-9.hs  generate_haskell_files.py  generate_splits.py  push_to_huggingface.py
models/: create_model_inputs.py  requirements.txt
models/evaluation/: evaluate.py  excelify.py  plotify.py  taxonomify.py
models/evaluation/annotated/: codegpt_finetuned-test-humaneval.xlsx  unixcoder_finetuned-test-humaneval.xlsx
models/evaluation/data/: codegpt_finetuned-test-humaneval.json
models/evaluation/output/: codegpt_base-test-humaneval.xlsx  codegpt_finetuned-test-humaneval.xlsx  unixcoder_base-test-humaneval.xlsx  unixcoder_finetuned-test-humaneval.xlsx
models/evaluation/overlap-check/: overlapify.py  overlapping-codegpt_finetuned-test-humaneval.json  overlapping-unixcoder_finetuned-test-humaneval.json
models/finetuning/: count_tokens.py
models/finetuning/codegpt/: .gitignore  blue-finetune.sh  create_dataset_files.py  run_lm.py
models/finetuning/unixcoder/: .gitignore  blue-finetune.sh  model.py  run.py
models/inference/: .gitignore  CodeGPT.py  Seq2Seq.py  Seq2SeqBase.py  UniXcoder.py  codegpt_finetuned_predict.py  codegpt_predict.py  inference.py  unixcoder_finetuned_predict.py  unixcoder_predict.py
models/inference/output/: unixcoder_finetuned-test.json  (+2 more)
(+8 files in other folders)
